--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,16 @@ appdirs==1.4.4
 asgiref==3.3.1
 black==20.8b1
 click==7.1.2
+dj-static==0.0.6
 Django==3.1.7
 django-filter==2.4.0
 django-graphql-auth==0.3.15
-django-graphql-jwt==0.3.0
+django-graphql-jwt==0.3.1
 graphene==2.1.8
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+gunicorn==20.0.4
 mypy-extensions==0.4.3
 pathspec==0.8.1
 promise==2.3
@@ -21,7 +23,10 @@ Rx==1.6.1
 singledispatch==3.6.1
 six==1.15.0
 sqlparse==0.4.1
+static3==0.7.0
 text-unidecode==1.3
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+waitress==1.4.4
+whitenoise==5.2.0
