--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-cors-headers = "^4.3.1"
 django-environ = "^0.11.2"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
+psycopg = "^3.1.16"
 
 
 [build-system]
